<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="false"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoScrollableView="@+id/list"
    sothree:umanoShadowHeight="4dp"
    android:tag="HomeActivity">

    <!-- MAIN CONTENT -->

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:id="@+id/home_layout">

        <include layout="@layout/content_drawer_activity_test" />


        <com.chibde.visualizer.CircleBarVisualizer
            android:id="@+id/visualizer"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>

        <ImageButton
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:id="@+id/connect"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/headphone_button"
            android:paddingBottom="10dp"
            android:src="@drawable/play_button" />

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="485dp">

            <ImageView
                android:id="@+id/main_play_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/play_button"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/white"/>
            <ImageView
                android:id="@+id/main_skip_back_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/skip_back_button"
                android:src="@drawable/ic_skip_previous_black_24dp"
                android:layout_alignParentStart="true"
                android:tint="@color/white"/>
            <ImageView
                android:id="@+id/main_skip_forward_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/skip_forward_button"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:layout_alignParentEnd="true"
                android:tint="@color/white"/>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <!-- SLIDING LAYOUT -->
    <LinearLayout
        android:id="@+id/dragView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#404040">

            <ImageView
                android:id="@+id/arrow_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/user_mute_or_unmute"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />

            <LinearLayout
                android:id="@+id/show_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/arrow_icon">

                <TextView
                    android:id="@+id/other_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/currently_listening"
                    android:textSize="32sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/swipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/show_layout"
                android:layout_toEndOf="@+id/arrow_icon"
                android:text="@string/open_drawer"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:paddingEnd="10dp">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:contentDescription="@string/people_picture"
                    android:src="@drawable/ic_people_black_24dp" />

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/user_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>